--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
         "core": "0.1.0"
     },
 
-    "repository": null,
+    "repository": "https://github.com/FabricCore/pully",
     "homepage": null
 }
